<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_accent_color"
    android:paddingStart="15dp"
    android:paddingEnd="15dp"
    android:paddingBottom="40dp">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/search_view_card_wrapper"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        app:layout_constraintBottom_toTopOf="@+id/current_location_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <SearchView
            android:id="@+id/city_search_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:queryBackground="@color/transparent"
            android:queryHint="@string/city_search_hint" />

    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/current_location_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="28sp"
        app:layout_constraintBottom_toTopOf="@+id/current_location_degrees"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_view_card_wrapper"
        tools:text="@string/current_location_title_hint" />

    <TextView
        android:id="@+id/current_location_degrees"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:textAlignment="center"
        android:textColor="@color/degrees_text"
        android:textSize="45sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/current_location_title"
        tools:text="@string/current_location_degrees_hint" />

    <ImageView
        android:id="@+id/current_location_weather_icon"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="40dp"
        android:layout_marginRight="5dp"
        android:contentDescription="@string/weather_icon"
        app:layout_constraintEnd_toStartOf="@+id/current_location_weather_description"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/current_location_degrees"
        tools:src="@mipmap/ic_launcher" />

    <TextView
        android:textAllCaps="true"
        android:id="@+id/current_location_weather_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/degrees_text"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/current_location_weather_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/current_location_weather_icon"
        app:layout_constraintTop_toTopOf="@+id/current_location_weather_icon"
        tools:text="@string/current_location_weather_description" />

    <ProgressBar
        android:id="@+id/current_location_progress"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:indeterminate="true"
        android:indeterminateTint="@color/white"
        android:indeterminateTintMode="src_atop"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/current_location_no_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_data"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>